package enums;

public enum TipoOrdem {
    COMPRA,
    VENDA
}
